--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -489,6 +489,6 @@ jobs:
 
       - name: "@End Cleanup work directory"
         run: |
-          ls -lha . ${{ github.workspace }}/*
-          rm -rfv ${{ github.workspace }}/*
-          ls -lha . ${{ github.workspace }}/*
+          ls -lha . ${{ github.workspace }}/
+          rm -rfv ${{ github.workspace }}/
+          ls -lha .
