--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -71,6 +71,6 @@ jobs:
 
       - name: "@End Cleanup work directory"
         run: |
-          ls -lha . ${{ github.workspace }}/*
-          rm -rfv ${{ github.workspace }}/*
-          ls -lha . ${{ github.workspace }}/*
+          ls -lha . ${{ github.workspace }}/
+          rm -rfv ${{ github.workspace }}/
+          ls -lha .
