--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -26,7 +26,7 @@ jobs:
       - self-hosted
       - ${{ matrix.runner_label }}
     strategy:
-      fail-fast: false
+      fail-fast: true
       matrix:
         include:
           # Alpine Linux cross-builds (musl)
@@ -495,3 +495,4 @@ jobs:
           echo "deleting workspace"
           rm -rfv ${{ github.workspace }}/
           ls -lha .
+          mkdir -vp ${{ github.workspace }}
