--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -290,8 +290,11 @@ jobs:
             libc: glibc
 
     steps:
-      - name: "@Start Clean build directory"
-        run: rm -rf build dist
+      - name: "@Start Clean directory"
+        run: |
+          echo "deleting workspace"
+          rm -rfv dist build ${{ github.workspace }}/
+          mkdir -vp ${{ github.workspace }}
 
       - name: Checkout code
         uses: actions/checkout@v4
@@ -484,15 +487,8 @@ jobs:
 #        if: runner.os == 'Linux' && runner.name == 'self-hosted'
 #        run: rm -rf "$GITHUB_WORKSPACE"/*
 
-      - name: "@Final Clean build directory"
-        run: rm -rfv build dist
-
-      - name: "@End Cleanup work directory"
+      - name: "@End Clean directory"
         run: |
-          echo "pwd=$(pwd)";
-          du -hs ${{ github.workspace }}
-          ls -lha . ${{ github.workspace }}/
           echo "deleting workspace"
-          rm -rfv ${{ github.workspace }}/
-          ls -lha .
+          rm -rfv dist build ${{ github.workspace }}/
           mkdir -vp ${{ github.workspace }}
