--- a/.github/workflows/build_and_publish.yml
+++ b/.github/workflows/build_and_publish.yml
@@ -344,6 +344,11 @@ jobs:
 
       - name: "Set GaRuS Variables"
         id: vars
+        env:
+          OS: ${{ matrix.os }}
+          ARCH: ${{ matrix.arch }}
+          MATRIX: ${{ matrix.name }}
+          ALIBC: "${{ matrix.libc }}"
         run: |
           echo "COMPILER=SHR" >> "$GITHUB_ENV"
           # If event is tag or release, use the tag; otherwise, use 0.0.0-SNAPSHOT
@@ -355,8 +360,17 @@ jobs:
           # Strip leading 'v' if present
           VERSION="${VERSION#v}"
           SHA7="${GITHUB_SHA::7}"
+          if [ -n "$ALIBC" ]; then
+            LIBC="-$ALIBC"
+          else
+            LIBC="-purego"
+          fi
+          echo "OS=$OS" >> $GITHUB_ENV
+          echo "ARCH=$ARCH" >> $GITHUB_ENV
           echo "VERSION=$VERSION" >> $GITHUB_ENV
           echo "SHA7=$SHA7" >> $GITHUB_ENV
+          echo "MATRIX=$MATRIX" >> $GITHUB_ENV
+          echo "LIBC=$LIBC" >> $GITHUB_ENV
         env:
           GITHUB_REF_TYPE: ${{ github.ref_type }}
           GITHUB_EVENT_NAME: ${{ github.event_name }}
@@ -367,17 +381,12 @@ jobs:
         env:
           VERSION: ${{ env.VERSION }}
           SHA7: ${{ env.SHA7 }}
-          OS: ${{ matrix.os }}
-          ARCH: ${{ matrix.arch }}
-          MATRIX: ${{ matrix.name }}
-          ALIBC: ${{ matrix.libc }}
+          LIBC: "${{ env.LIBC }}"
+          MATRIX: ${{ env.MATRIX }}
+          OS: ${{ env.OS }}
+          ARCH: ${{ env.ARCH }}
         run: |
           set -euo pipefail
-          if [ -n "$ALIBC" ]; then
-            LIBC="-$ALIBC"
-          else
-            LIBC="-purego"
-          fi
           test -z "$SHA7" && echo "SHA7 not set" && exit 21
           test -z "$VERSION" && echo "VERSION not set" && exit 22
           test -z "$OS" && echo "VERSION not set" && exit 23
@@ -408,7 +417,7 @@ jobs:
           sha512sum builds/${{ matrix.name }}/usr/bin/$binary_name > builds/${{ matrix.name }}/usr/bin/$binary_name.sha512sum
           #zip -j "NZBreX_${VERSION}-${SHA7}-${OS}-${ARCH}-${{ matrix.name }}.zip" builds/${{ matrix.name }}/usr/bin/$binary_name builds/${{ matrix.name }}/usr/bin/$binary_name.sha* cleanHeaders.txt provider.sample.json provider.ygg.json
 
-          zip -j "NZBreX_${VERSION}-${SHA7}-${{ matrix.name }}${LIBC}.zip" builds/${{ matrix.name }}/usr/bin/$binary_name builds/${{ matrix.name }}/usr/bin/$binary_name.sha* cleanHeaders.txt provider.sample.json provider.ygg.json
+          zip -j "NZBreX_${VERSION}-${SHA7}-${{ matrix.name }}${{ env.LIBC }}.zip" builds/${{ matrix.name }}/usr/bin/$binary_name builds/${{ matrix.name }}/usr/bin/$binary_name.sha* cleanHeaders.txt provider.sample.json provider.ygg.json
 
           # Only make .deb packages for Linux with glibc
           matrix_libc="${{ matrix.libc }}"
@@ -426,7 +435,7 @@ jobs:
             echo "Architecture: ${ARCH}" >> builds/${{ matrix.name }}/DEBIAN/control
             echo "Description: NZBreX - a cmd line tool to re-upload articles missing from providers" >> builds/${{ matrix.name }}/DEBIAN/control
             #dpkg-deb --root-owner-group --build builds/${{ matrix.name }} NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.name }}.deb
-            dpkg-deb --root-owner-group --build builds/${{ matrix.name }} NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.name }}${LIBC}.deb
+            dpkg-deb --root-owner-group --build builds/${{ matrix.name }} NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.name }}${{ env.LIBC }}.deb
           fi
 
       - name: "Upload binary to private GaRuS (Git-actions-Runner-upload-Server)"
@@ -461,7 +470,7 @@ jobs:
           set -e
           for ext in zip deb; do
             #file="NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.name }}.${ext}"
-            file="NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.name }}${LIBC}.${ext}"
+            file="NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.name }}${{ env.LIBC }}.${ext}"
             if [ -e "$file" ]; then
               for algo in 256 512; do
                 sha="sha${algo}sum"
@@ -488,9 +497,9 @@ jobs:
 #        with:
 #          files: |
 #            #NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.name }}.zip
-#            NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.name }}${LIBC}.zip
+#            NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.name }}${{ env.LIBC }}.zip
 #            #NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.os }}-${{ matrix.arch }}-${{ matrix.name }}.deb
-#            NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.name }}${LIBC}.deb
+#            NZBreX_${{ env.VERSION }}-${{ env.SHA7 }}-${{ matrix.name }}${{ env.LIBC }}.deb
 
 #      - name: "Backup go cache"
 #        run: runner/go-cache-backup.sh
