disable cache in goreleaser

--- a/.github/workflows/goreleaser_test.yml
+++ b/.github/workflows/goreleaser_test.yml
@@ -50,8 +50,8 @@ jobs:
       #     sudo apt-get update
       #     sudo apt-get install -y musl-tools zip curl dpkg-dev
 
-      - name: "Restore go cache"
-        run: runner/go-cache-restore.sh
+      #- name: "Restore go cache"
+      #  run: runner/go-cache-restore.sh
 
       - name: "Run GoReleaser (Test Build)"
         uses: goreleaser/goreleaser-action@v6
@@ -72,8 +72,8 @@ jobs:
           GITHUB_SHA7: ${{ env.GITHUB_SHA7 }}
           COMPILER: "GOR"
 
-      - name: "Backup go cache"
-        run: runner/go-cache-backup.sh
+      #- name: "Backup go cache"
+      #  run: runner/go-cache-backup.sh
 
       - name: "@End Clean directory"
         run: |
